# simple-pub-sub

./: CMakeLists.txt  package.xml  readme.md
src/: publisher_with_class.cpp  subscriber_with_class.cpp
